cambio de direccion de carpeta contenedora de imagenes

--- a/Principal.html
+++ b/Principal.html
@@ -75,7 +75,7 @@
     </div>
 
     <div>
-        <img src="coder.png" alt="logo">
+        <img src="img/coder.png" alt="logo">
     </div>
 
     <footer class="footer-content">
